# apostilaQGIS

./: README.md  _quarto.yml  capitulo1.qmd  capitulo10-1.qmd  capitulo10.qmd  capitulo11.qmd  capitulo12.qmd  capitulo2.qmd  capitulo3.qmd  capitulo4.qmd  capitulo5.qmd  capitulo6.qmd  capitulo7.qmd  capitulo8.qmd  capitulo9.qmd  index.qmd  index.tex  main.py  modelo_analise_marimo.py  pyproject.toml  references.bib
docs/: capitulo1.html  capitulo10-1.html  capitulo10.html  capitulo11.html  capitulo12.html  capitulo2.html  capitulo3.html  capitulo4.html  capitulo5.html  capitulo6.html  capitulo7.html  capitulo8.html  capitulo9.html  index.html  references.html  search.json  style.css  summary.html
docs/site_libs/bootstrap/: bootstrap-c8e075446336661fae715156f8f5d951.min.css
