[project]
name = "apostilaqgis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "ipython>=9.12.0",
    "marimo>=0.23.0",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
]
